livingroom-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: living-room-dashboard
  namespace: home-assistant
  labels:
    app: living-room-dashboard
spec:
  rules:
    - host: dashboard-livingroom.k3s.firekatt.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: living-room-dashboard
                port:
                  number: 5050
    - host: edit-dashboard-livingroom.k3s.firekatt.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: living-room-dashboard
                port:
                  number: 8080
